<resources>

    <string name="app_name">DnD Char Sheet</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="not_set"></string>
    <string name="char_name">Name: </string>
    <string name="char_class">Class: </string>
    <string name="char_race">Race: </string>
    <string name="char_deity">Patron Deity: </string>
    <string name="char_origin">Place of Origin: </string>
    <string name="char_level">Level: </string>
    <string name="char_alignment">Alignment: </string>
    <string name="char_religion">Religion: </string>
    <string name="stats_stats">Stats:</string>
    <string name="stats_str">STR: </string>
    <string name="stats_int">INT: </string>
    <string name="stats_wis">WIS: </string>
    <string name="stats_dex">DEX: </string>
    <string name="stats_con">CON: </string>
    <string name="stats_cha">CHA: </string>
    <string name="stats_spells">Spells:</string>
    <string name="stats_abil">Abilities: </string>
    <string name="combat_hp">HP: </string>
    <string name="combat_ac">AC: </string>
    <string name="combat_max">Max: </string>
    <string name="combat_base">Base: </string>
    <string name="combat_now">Now: </string>
    <string name="combat_bonuses_attr">Attribute Bonuses: </string>
    <string name="combat_bonuses_wep">Weapon Bonuses: </string>
    <string name="items_items">Items: </string>
    <string name="title_section1">Character</string>
    <string name="title_section2">Stats</string>
    <string name="title_section3">Combat</string>
    <string name="title_section4">Items</string>
    <string name="title_activity_info">InfoActivity</string>

</resources>