<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CombatFragment" >
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >

    <TextView
        android:id="@+id/combat_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/combat_hp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dip"
        android:paddingRight="20dip" >

        <TextView
            android:id="@+id/combat_hp_now_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/combat_now"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/combat_hp_now_val"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:ems="10"
        	android:inputType="textMultiLine"
            android:text="@string/not_set"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/combat_hp_max_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:text="@string/combat_max"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/combat_hp_max_val"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:ems="10"
        	android:inputType="textMultiLine"
            android:text="@string/not_set"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <TextView
        android:id="@+id/combat_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dip"
        android:text="@string/combat_ac"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dip"
        android:paddingRight="20dip" >

        <TextView
            android:id="@+id/combat_ac_now_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/combat_now"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/combat_ac_now_val"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:ems="10"
        	android:inputType="textMultiLine"
            android:text="@string/not_set"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/combat_ac_base_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:text="@string/combat_base"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/combat_ac_base_val"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:ems="10"
        	android:inputType="textMultiLine"
            android:text="@string/not_set"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <TextView
        android:id="@+id/combat_bonuses_attr_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dip"
        android:text="@string/combat_bonuses_attr"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/combat_bonuses_attr_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:paddingLeft="20dip" />

    <TextView
        android:id="@+id/combat_bonuses_wep_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dip"
        android:text="@string/combat_bonuses_wep"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/combat_bonuses_wep_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:paddingLeft="20dip" />

    </LinearLayout>
</ScrollView>