<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CharacterFragment" >
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/char_name_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dip"
            android:text="@string/char_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/char_name_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
        	android:inputType="textMultiLine"
            android:text="@string/not_set"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/char_class_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dip"
            android:text="@string/char_class"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/char_class_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
        	android:inputType="textMultiLine"
            android:text="@string/not_set"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/char_race_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dip"
            android:text="@string/char_race"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/char_race_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
        	android:inputType="textMultiLine"
            android:text="@string/not_set"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/char_level_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dip"
            android:text="@string/char_level"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/char_level_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
        	android:inputType="textMultiLine"
            android:text="@string/not_set"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="50dip" >

        <TextView
            android:id="@+id/char_alignment_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dip"
            android:text="@string/char_alignment"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/char_alignment_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
        	android:inputType="textMultiLine"
            android:text="@string/not_set"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/char_deity_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dip"
            android:text="@string/char_deity"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/char_deity_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
        	android:inputType="textMultiLine"
            android:text="@string/not_set"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/char_religion_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dip"
            android:text="@string/char_religion"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/char_religion_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
        	android:inputType="textMultiLine"
            android:text="@string/not_set"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="50dip" >

        <TextView
            android:id="@+id/char_origin_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dip"
            android:text="@string/char_origin"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/char_origin_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
        	android:inputType="textMultiLine"
            android:text="@string/not_set"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
    
	</LinearLayout>
</ScrollView>